...
fun HomeScreen(
    onProductListClick: () -> Unit
) {
    Column(
        modifier = Modifier
            .fillMaxSize()
            .testTag("Home Screen"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.SpaceEvenly
    ) {
        Image(
            modifier = Modifier
                .width(180.dp)
...
        )
        Text(
            text = stringResource(id = R.string.home_screen_title),
            style = MaterialTheme.typography.titleMedium
        )
        ElevatedButton(
            modifier = Modifier.testTag("Go to Products button"),
            onClick = onProductListClick
        ) {
            Text(
                text = stringResource(id = R.string.go_to_products),
                style = MaterialTheme.typography.titleLarge
            )
...
