...
    onErrorDismissAction: () -> Unit,
    onCloseScreenClick: () -> Unit
) {
    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("Products Screen")
    ) {
        when (productItemsStateUi) {
            is ProductItemsStateUi.Loading -> LoadingDialog()
            is ProductItemsStateUi.Success ->
                if (productItemsStateUi.productItems.isNotEmpty()) {
                    FetchProductItems(
...
                    errorMessage = productItemsStateUi.errorMessage,
                    onDismiss = onErrorDismissAction
                )
        }
        Button(
            modifier = Modifier
                .testTag("Go to checkout Button")
                .align(Alignment.BottomCenter)
                .padding(16.dp)
                .fillMaxWidth(),
            onClick = onGoToPaymentClick
        ) {
            Text(
...
