...
    onPayClick: () -> Unit,
    onErrorDismissAction: () -> Unit
) {
    var itemsSize by remember { mutableIntStateOf(0) }
    Box(modifier = Modifier
        .fillMaxSize()
        .testTag("Checkout Screen")
    ) {
        when (productItemsStateUi) {
            is ProductItemsStateUi.Loading -> LoadingDialog()
            is ProductItemsStateUi.Success -> {
                itemsSize = productItemsStateUi.productItems.size
                if (itemsSize > 0) {
...
